--- a/project/package.json
+++ b/project/package.json
@@ -31,6 +31,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "react-router-dom": "^7.5.3",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
